<resources>

    <string name="app_name">BeachStop</string>
    <string name="escolher">Incluir</string>
    <string name="finalizar_pedido">Pedir</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="itens_kit">Itens do kit</string>
    <string name="sobre_o_prato">Sobre o prato</string>
    <string name="sobre_o_kit">Sobre o Kit</string>
    <string name="acompanhamentos">Acompanhamentos</string>
    <string name="tempo_medio">Tempo médio \nde preparo</string>
    <string name="enviar_pedido">Enviar o pedido</string>
    <string name="enviar_conta">Solicitar a conta</string>
    <string name="call_garcom">Chamar Garçom</string>
    <string name="app_id">600470246741282</string>
    <string name="no_network_connection_toast">Erro na internet!</string>
    <string name="saudacao_cadastro_cliente">Olá! Bem vindo ao BeachStop Ipitanga, para sua comodidade, gostariamos de saber quem é você!</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="celular">Celular</string>
    <string name="aniversario">Aniversário</string>
    <string name="cancelar">Cancelar</string>
    <string name="Salvar">Salvar</string>
    <string name="ok">OK</string>

</resources>