<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_system"
    android:orientation="vertical"
    tools:context=".CadastroClienteActivity">

    <com.login.beachstop.android.views.actionbar.ActionBar
        android:id="@+id/actionbar"
        style="@style/ActionBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagem_action_bar"
                android:layout_width="@dimen/actionbar_item_width"
                android:layout_height="@dimen/actionbar_item_height"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo_topo" />
        </LinearLayout>

    </com.login.beachstop.android.views.actionbar.ActionBar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_system"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/activity_cadastro_cliente_text_view_saudacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/saudacao_cadastro_cliente"
            android:textColor="@color/marrom" />

        <TextView
            android:id="@+id/activity_cadastro_cliente_text_view_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textColor="@color/marrom" />

        <EditText
            android:id="@+id/activity_cadastro_cliente_edit_text_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/activity_cadastro_cliente_text_view_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/marrom" />

        <EditText
            android:id="@+id/activity_cadastro_cliente_edit_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/activity_cadastro_cliente_text_view_celular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celular"
            android:textColor="@color/marrom" />

        <EditText
            android:id="@+id/activity_cadastro_cliente_edit_text_celular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:inputType="phone" />

        <TextView
            android:id="@+id/activity_cadastro_cliente_text_view_data_nascimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aniversario"
            android:textColor="@color/marrom" />

        <EditText
            android:id="@+id/activity_cadastro_cliente_edit_text_data_nascimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:ems="10"
            android:inputType="date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:gravity="bottom"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:gravity="bottom">

                <Button
                    android:id="@+id/activity_cadastro_cliente_button_cancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="#3286B1"
                    android:padding="10dp"
                    android:text="@string/cancelar"
                    android:textColor="#0B405F"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/activity_cadastro_cliente_button_salvar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:background="#3286B1"
                    android:padding="10dp"
                    android:text="@string/Salvar"
                    android:textColor="#0B405F"
                    android:textSize="20sp" />

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>