<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_system"
    android:orientation="vertical"
    tools:context=".CallGarcomActivity">

    <com.login.beachstop.android.views.actionbar.ActionBar
        android:id="@+id/actionbar"
        style="@style/ActionBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imagem_action_bar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/text_view_action_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:textColor="@color/branco"
                android:textSize="20sp" />
        </LinearLayout>
    </com.login.beachstop.android.views.actionbar.ActionBar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/bg_system"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/activity_call_garcom_button_call_garcom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:background="#3286B1"
            android:drawableLeft="@drawable/icone_chamados"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:text="@string/call_garcom"
            android:textColor="#0B405F"
            android:textSize="20sp" />

        <Button
            android:id="@+id/activity_call_garcom_button_fechar_conta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#3286B1"
            android:drawableLeft="@drawable/icone_conta"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:text="@string/enviar_conta"
            android:textColor="#0B405F"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>