<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.login.beachstop.android.views.actionbar.ActionBar
        android:id="@+id/actionbar"
        style="@style/ActionBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true">

            <Button
                android:id="@+id/fragment_kit_detalhe_button_compartilhar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/icone_compartilhar"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/text_view_action_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:lines="2"
                android:maxLines="2"
                android:text="Pastel"
                android:textColor="@color/branco"
                android:textSize="16sp" />
        </RelativeLayout>
    </com.login.beachstop.android.views.actionbar.ActionBar>

    <com.nirhart.parallaxscroll.views.ParallaxScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        app:parallax_factor="1.9"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fragment_kit_detalhe_image_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:adjustViewBounds="true"
                android:background="@android:color/white"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_kit_detalhe_text_view_lbl_sobre_prato"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:singleLine="false"
                    android:text="@string/sobre_o_kit"
                    android:textColor="#900B405F"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/fragment_kit_detalhe_text_view_descricao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:singleLine="false"
                    android:textColor="#75000000"
                    android:textSize="14sp" />

                <TableLayout
                    android:id="@+id/fragment_kit_detalhe_table_layout_kit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_fragment_detalhe_item_cardapio_table_layout_sub_item"
                    android:stretchColumns="1,2"></TableLayout>

                <LinearLayout
                    android:id="@+id/fragment_kit_detalhe_linear_layout_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|right"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:visibility="gone">

                    <Button
                        android:id="@+id/fragment_kit_detalhe_button_finalizar_pedido"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:background="#2175B1"
                        android:drawableLeft="@drawable/icone_mais"
                        android:drawablePadding="5dp"
                        android:gravity="right"
                        android:padding="5dp"
                        android:text="@string/finalizar_pedido"
                        android:textColor="#0B405F" />

                    <Button
                        android:id="@+id/fragment_kit_detalhe_button_add_item"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginLeft="10dp"
                        android:background="#2175B1"
                        android:drawableLeft="@drawable/icone_mais"
                        android:drawablePadding="5dp"
                        android:gravity="right"
                        android:padding="5dp"
                        android:text="@string/escolher"
                        android:textColor="#0B405F" />
                </LinearLayout>


                <TextView
                    android:id="@+id/fragment_kit_detalhe_text_view_lbl_itens"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:singleLine="false"
                    android:text="@string/itens_kit"
                    android:textColor="#900B405F"
                    android:textSize="16sp" />

                <TableLayout
                    android:id="@+id/fragment_kit_detalhe_table_layout_sub_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_fragment_detalhe_item_cardapio_table_layout_sub_item"
                    android:stretchColumns="1,2,3"></TableLayout>

            </LinearLayout>
        </LinearLayout>
    </com.nirhart.parallaxscroll.views.ParallaxScrollView>

</LinearLayout>